Update : layout AddReminder and render event click Time,Date ver 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:label="Nhắc nhở mới"
             android:name=".AddReminder"
             android:exported="true" />
         <activity
