--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:label="Nhắc nhở mới"
-            android:name=".Activity.AddReminderActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activity.AddReminderActivity"
+            android:exported="true"
+            android:label="Nhắc nhở mới" />
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
